--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<input type="checkbox" id="menu-button"></input>
 					<label for="menu-button" class="hamburger-toggle"></label>
 					<div class="logo">
-						<img src="http://icons.iconarchive.com/icons/martin-berube/square-animal/96/Dog-icon.png">
+						<img src="img/Dog-icon.png">
 					</div>
 						<ul class="menu-nav">
 							<li><a href="#price" title="#price">domostwo</a></li>
