--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>p-salonik</title>
 	<link rel="stylesheet" type="text/css" href ="style.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header class="header">
@@ -14,7 +15,7 @@
 					<input type="checkbox" id="menu-button"></input>
 					<label for="menu-button" class="hamburger-toggle"></label>
 					<div class="logo">
-						<img src="img/Dog-icon.png">
+						<img src="img/dog-icon.png">
 					</div>
 						<ul class="menu-nav">
 							<li><a href="#price" title="#price">domostwo</a></li>
@@ -37,7 +38,7 @@
 	</section>
 	<section class="offer"> 
 		<div class="container">
-			<h2>Nasza oferta</h2>
+			<h1>Nasza oferta</h1>
 		 	<div class="row">
 		 		<div class="col-30offer col-m-32offer col-s-12 gallery dog1 dog1-m dog1-s no-padding">
 		 			<div class="layer">
@@ -65,26 +66,26 @@
 		 		 		<img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&scale=2&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:red%7Clabel:Company%7C40.718217,-73.998284&key=AIzaSyCnC6YIM_Aup50dB6kLS-j9JA_tZdqg-Pc">
 		 		 	</div>
 		 		 	<div class="col-4 col-m-12 col-s-12 adress">
-		 		 		<h2>kontakt</h2>
-		 		 			<div class="row">
+		 		 		<h1>kontakt</h1>
+		 		 			<div class="row row-flex">
 		 		 				<div class="col-4 no-padding">
-		 		 					<p>adres:</p>
+		 		 				<i class="fa fa-map-marker"></i>
 		 		 				</div>
 		 		 				<div class="col-6 no-padding">
 		 		 					<p> 55-876 Wrocław, ul. Gwarecka 1</p>
 		 		 				</div>
 							</div>
-							<div class="row">
+							<div class="row row-flex">
 		 		 				<div class="col-4 no-padding">
-		 		 					<p>telefon:</p>
+		 		 					<i class="fa fa-phone"></i>
 		 		 				</div>
 		 		 				<div class="col-6 no-padding">
 		 		 					<p> +48 979 666 777</p>
 		 		 				</div>
 							</div>
-							<div class="row">
+							<div class="row row-flex">
 		 		 				<div class="col-4 no-padding">
-		 		 					<p>e-mail:</p>
+		 		 					<i class="fa fa-envelope"></i>
 		 		 				</div>
 		 		 				<div class="col-6 no-padding">
 		 		 					<p>kontakt@p-salonik.pl</p>
