--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<div class="container">
 			<div class="row">
 				<nav class="navbar">
-					<input type="checkbox" id="menu-button"></input>
+					<input type="checkbox" id="menu-button">
 					<label for="menu-button" class="hamburger-toggle"></label>
 					<div class="logo">
-						<img src="img/dog-icon.png">
+						<img src="img/dog-icon.png" alt="dog">
 					</div>
 						<ul class="menu-nav">
 							<li><a href="#price" title="#price">domostwo</a></li>
@@ -63,7 +63,7 @@
 		 	<div class="row">
 		 		<div class="col-12">
 		 			<div class="col-8 col-m-12 col-s-12 map">
-		 		 		<img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&scale=2&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:red%7Clabel:Company%7C40.718217,-73.998284&key=AIzaSyCnC6YIM_Aup50dB6kLS-j9JA_tZdqg-Pc">
+		 		 		<img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&scale=2&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:red%7Clabel:Company%7C40.718217,-73.998284&key=AIzaSyCnC6YIM_Aup50dB6kLS-j9JA_tZdqg-Pc" alt="map">
 		 		 	</div>
 		 		 	<div class="col-4 col-m-12 col-s-12 adress">
 		 		 		<h1>kontakt</h1>
