--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
 		 		<div class="col-30offer col-m-32offer col-s-12 gallery dog1 dog1-m dog1-s no-padding">
 		 			<div class="layer">
 		 				<p>Mycie</p>
+		 				<p>zobacz ofertę</p>
+		 				<p>Zamów</p>
 		 			</div>
 		 		</div>	
 		 		<div class="col-30offer col-m-32offer col-s-12 gallery dog2 dog2-m dog2-s no-padding">
 		 			<div class="layer">
 		 				<p>Strzyżenie</p>
+		 				<p>zobacz ofertę</p>
+		 				<p>Zamów</p>
 		 			</div>
 		 		</div>
 		 		<div class="col-30offer col-m-32offer col-s-12 gallery dog3 no-padding">
 		 			<div class="layer">
 		 				<p>Trymowanie</p>
+		 				<p>zobacz ofertę</p>
+		 				<p>Zamów</p>
 		 			</div>
 		 		</div>
 		 	</div>
@@ -100,9 +106,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<P> Copyright by me!</p>
+						<p> Copyright by me!</p>
 					</div>
 				</div>
 			</div>
 	</footer>
 </body>
+</html>
