--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
 		 	</div>
 		 </div>
 	</section>
+	<section class = "opinion">
+		<div class = "container">
+			<h1> Co mówią o nas nasi klienci</h1>
+			<div class = "row">
+				<div id="carousel">
+					<ul id="slider">
+						<li><p>Praesent rutrum mattis erat at porta. Sed justo enim, aliquet ut facilisis quis, pulvinar eget lorem. Nulla rhoncus rutrum blandit. Etiam vitae dolor vitae odio lacinia consectetur.</p><img src="img/slajd1.jpg"></li>
+						<li><p>Vivamus finibus quis mauris ultrices sollicitudin. Nullam non lectus ac libero fermentum congue. Integer at orci id velit placerat lacinia.</p><img src="img/slajd3.jpg"></li>
+						<li><p> Praesent tristique luctus odio. Donec ultrices convallis quam vel cursus. Integer et elementum tortor. Vestibulum ut risus non lacus vestibulum pulvinar sit amet non orci.</p><img src="img/slajd2.jpg"></li>
+						<li><p>Sed finibus tempus lacinia. Phasellus eu elementum enim. Proin faucibus urna non felis commodo, vitae volutpat nisi convallis.</p><img src="img/slajd4.jpg"></li>
+						<li><p>Pellentesque laoreet augue magna, sit amet egestas neque lacinia non. Donec magna lacus, fermentum eu libero sed, mollis porta nisi.</p><img src="img/slajd5.jpg"></li>
+						<li><p>Maecenas elementum, nunc at eleifend malesuada, elit elit commodo lacus, at bibendum leo erat id diam. Suspendisse potenti.</p><img src="img/slajd6.jpg"></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="directions">
 		<div class="container">
 		 	<div class="row">
@@ -113,7 +130,8 @@
 				</div>
 			</div>
 	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-	<script type="text/javascript" src="js/leaflet.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
