--- a/index.html
+++ b/index.html
@@ -135,3 +135,5 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
