--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 						<li><p>Pellentesque laoreet augue magna, sit amet egestas neque lacinia non. Donec magna lacus, fermentum eu libero sed, mollis porta nisi.</p><img src="img/slajd5.jpg"></li>
 						<li><p>Maecenas elementum, nunc at eleifend malesuada, elit elit commodo lacus, at bibendum leo erat id diam. Suspendisse potenti.</p><img src="img/slajd6.jpg"></li>
 					</ul>
+					<div class="arrows">
+						<p><</p>
+						<p>></p>
+					</div>
 				</div>
 			</div>
 		</div>
